Fixed command in README.md